[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tourmaster-ai"
version = "0.1.0"
description = "Production-grade multi-agent system for music tour management."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "langchain==0.3.11",
    "langchain-chroma==0.2.4",
    "langchain-community==0.3.0",
    "langchain-openai==0.2.14",
    "langchain-text-splitters==0.3.0",
    "langgraph==0.2.20",
    "langfuse>=2.45.0,<3",
    "openai",
    "chromadb",
    "tiktoken",
    "python-dotenv",
    "pandas",
    "jupyter",
    "unstructured",
    "markdown"
]

[project.scripts]
tourmaster = "main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]
py-modules = ["main"]